# otus_cpp_tasks

./: CMakeLists.txt  README.md  Server.h  alloc.h  async.h  block.cpp  block.h  complex_loger.h  container.h  ctx.cpp  ctx.h  editor.h  elem.h  ip_filter.cpp  loger.h  main.cpp  matrix.cpp  matrix.h  minternal.h  model.h  mproxy.h  mylibversion.cpp  mylibversion.h  print_tuple.h  store.h  test_version.cpp  view.h
.github/workflows/: main.yml  main1.yml  release.yml
avg/: reducer.cpp
disp/: Makefile  mapper.cpp  reducer.cpp  run_locally.sh
